login, register and compass styles + audio and theme toggles

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,8 +19,12 @@
     "target": "es2022",
     "module": "es2020",
     "lib": ["es2018", "dom"],
-    "useDefineForClassFields": false
+    "useDefineForClassFields": false,
+    "skipLibCheck": true
   },
+  "exclude": [
+    "node_modules/@types/three/examples/jsm/loaders/KTX2Loader.d.ts"
+  ],
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
