--- a/package.json
+++ b/package.json
@@ -29,10 +29,13 @@
     "@capacitor/haptics": "7.0.0",
     "@capacitor/ios": "7.1.0",
     "@capacitor/keyboard": "7.0.0",
+    "@capacitor/preferences": "^7.0.0",
     "@capacitor/status-bar": "7.0.0",
     "@ionic/angular": "^8.0.0",
+    "gsap": "^3.12.7",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
+    "three": "^0.175.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
@@ -49,6 +52,7 @@
     "@capacitor/cli": "7.1.0",
     "@ionic/angular-toolkit": "^12.0.0",
     "@types/jasmine": "~5.1.0",
+    "@types/three": "^0.175.0",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
     "eslint": "^9.16.0",
